Avoid bars overlapping or breaking the row
Bug: T101815

--- a/modules/stats/styles/ext.cx.stats.less
+++ b/modules/stats/styles/ext.cx.stats.less
@@ -115,6 +115,7 @@
 		height: 20px;
 		padding: 0;
 		margin: 0;
+		box-sizing: border-box;
 		background-color: #347bff;
 		border-right: 1px solid @gray;
 		font-size: small;
